--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,21 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='https://bootswatch.com/cyborg/bootstrap.min.css')
+    link(rel='stylesheet', href='https://bootswatch.com/slate/bootstrap.min.css')
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js')
+    style(type='text/css').
+      table, th, td { border: 1px solid black; } 
+      th, td { padding: 10px; }
+
+      .alert-enabled { 
+          background-color: #dff0d8;
+          border-color: #468847;
+          color: #468847;
+      }
+      .alert-disabled { 
+          background-color: #f2dede;
+          border-color: #b94a48;
+          color: #b94a48;
+      }
   body
     block content
