--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,8 +4,9 @@ html
     title= title
     link(rel='stylesheet', href='https://bootswatch.com/slate/bootstrap.min.css')
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js')
+    meta(name="viewport" content="user-scalable=no, width=device-width")
     style(type='text/css').
-      table, th, td { border: 1px solid black; } 
+      table { border: 2px solid black; } 
       th, td { padding: 10px; }
 
       .alert-enabled { 
